--- a/theme/src/base/base_v3.less
+++ b/theme/src/base/base_v3.less
@@ -100,6 +100,8 @@ figcaption p {
 
 .block h4{
     background-color: @mainColor;
+    padding-top: @magicNumber / 2;
+    padding-bottom: @magicNumber / 2;
 }
 
 .block ul {
