--- a/theme/src/layout/layout_vgrid.less
+++ b/theme/src/layout/layout_vgrid.less
@@ -127,7 +127,7 @@ article,
 .next-previous {
     #desinax-vgrid.column(@columns);
     position: relative;
-    height: 18px;
+    height: @magicNumber;
 }
 
 .next {
